--- a/run/application_config_meta.json
+++ b/run/application_config_meta.json
@@ -1,5 +1,17 @@
 {
   "keys": "E:\\nodeSoEasy\\soEasy\\config\\config.default.js",
+  "sequelize": {
+    "dialect": "E:\\nodeSoEasy\\soEasy\\config\\config.default.js",
+    "database": "E:\\nodeSoEasy\\soEasy\\config\\config.default.js",
+    "host": "E:\\nodeSoEasy\\soEasy\\config\\config.default.js",
+    "port": "E:\\nodeSoEasy\\soEasy\\config\\config.default.js",
+    "username": "E:\\nodeSoEasy\\soEasy\\config\\config.default.js",
+    "password": "E:\\nodeSoEasy\\soEasy\\config\\config.default.js",
+    "define": {
+      "freezeTableName": "E:\\nodeSoEasy\\soEasy\\config\\config.default.js",
+      "underscored": "E:\\nodeSoEasy\\soEasy\\config\\config.default.js"
+    }
+  },
   "session": {
     "maxAge": "E:\\nodeSoEasy\\soEasy\\node_modules\\egg-session\\config\\config.default.js",
     "key": "E:\\nodeSoEasy\\soEasy\\node_modules\\egg-session\\config\\config.default.js",
@@ -168,7 +180,11 @@
     },
     "homepage": "E:\\nodeSoEasy\\soEasy\\node_modules\\egg\\config\\config.default.js",
     "dependencies": {
-      "egg": "E:\\nodeSoEasy\\soEasy\\node_modules\\egg\\config\\config.default.js"
+      "axios": "E:\\nodeSoEasy\\soEasy\\node_modules\\egg\\config\\config.default.js",
+      "cheerio": "E:\\nodeSoEasy\\soEasy\\node_modules\\egg\\config\\config.default.js",
+      "egg": "E:\\nodeSoEasy\\soEasy\\node_modules\\egg\\config\\config.default.js",
+      "egg-sequelize": "E:\\nodeSoEasy\\soEasy\\node_modules\\egg\\config\\config.default.js",
+      "mysql2": "E:\\nodeSoEasy\\soEasy\\node_modules\\egg\\config\\config.default.js"
     },
     "devDependencies": {
       "egg-bin": "E:\\nodeSoEasy\\soEasy\\node_modules\\egg\\config\\config.default.js"
