--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "soeasy",
   "version": "1.0.0",
   "description": "垃圾分类",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "egg-bin dev"
+    "dev": "egg-bin dev",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
