--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "cheerio": "^1.0.0-rc.3",
     "egg": "^2.22.2",
     "egg-sequelize": "^5.1.0",
-    "mysql2": "^1.6.5"
+    "mysql2": "^1.6.5",
+    "urlencode": "^1.1.0"
   },
   "devDependencies": {
     "egg-bin": "^4.13.1"
